--- a/administrator-server/pom.xml
+++ b/administrator-server/pom.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-
     <parent>
         <groupId>com.yanglao</groupId>
         <artifactId>yanglao</artifactId>
@@ -11,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>administrator</artifactId>
+    <artifactId>administrator-server</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
