--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>yanglao</description>
     <packaging>pom</packaging>
     <modules>
-        <module>administrator</module>
+        <module>administrator-server</module>
     </modules>
 
     <properties>
