--- a/administrator-server/src/main/resources/application.yml
+++ b/administrator-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 5000
 spring:
   application:
-    name: Administrator-provider
+    name: Administrator-server
   cloud:
     nacos:
       discovery:
@@ -11,5 +11,5 @@ spring:
         server-addr: 127.0.0.1:8848
   config:
     import:
-      -nacos:administrator-server.yaml
+      - nacos:administrator-server.yaml
 
