--- a/login-server/src/main/resources/application.yml
+++ b/login-server/src/main/resources/application.yml
@@ -1,1 +1,14 @@
-spring.application.name=login-server
+server:
+  port: 5000
+spring:
+  application:
+    name: Administrator-server
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+      config:
+        server-addr: 127.0.0.1:8848
+  config:
+    import:
+      - nacos:login-server.yaml
