--- a/login-server/pom.xml
+++ b/login-server/pom.xml
@@ -62,9 +62,8 @@
         <!--druid-->
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.10</version>
-        </dependency>
+            <artifactId>druid-spring-boot-3-starter</artifactId>
+            <version>1.2.23</version> </dependency>
         <!-- SpringDoc OpenAPI Starter (适配 Spring Boot 3+) -->
         <dependency>
             <groupId>org.springdoc</groupId>
