前后端功能完善

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>common-server</module>
         <module>message-server</module>
         <module>activity-server</module>
+        <module>health-server</module>
     </modules>
 
     <properties>
